--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light|Source+Serif+Pro:400,600,700');
 
     body{
-      background-color: #264a84;
+      background-color: #264a84
+    }
+
+    .jumbotron{
+      background-color: #d6e5ff !important;
     }
     </style>
 
@@ -29,65 +33,110 @@
               <a class="nav-link" href="#">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Inventory</a>
+              <a class="nav-link" href="pages/inventory.html">Inventory</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="pages/projects.html">Projects</a>
             </li>
           </ul>
     </nav>
 
       <!-- Main header-->
       <section>
-        <div class="container" style="background-image: URL('images/leaf.png'); color: white; background-repeat: no-repeat">
+        <div class="container-fluid" style="background-image: URL('images/fabric.jpg'); color: #1598af">
           <div class="row justify-content-md-center p-5">
             <div class="col-6">
-              <h1 class="display-1" style="font-family: 'Shadows Into Light', cursive">
-                Technical Core
-              </h1>
-              <p>
-                ​​​​​​​​​​​Welcome to the technical core website! This site will provide you with
-                information on projects being worked on by the technical core. Along with this,
-                documentation of certain devices will be provided here. You will also be able
-                to request to borrow items from the AV lab using this website.
-              </p>
-              <div class="row justify-content-center">
-                <a class="btn btn-outline-info" href="https://www.boystownhospital.org/research/COBRE/Pages/Technical-Core.aspx" role="button">Full Site</a>
-              </div>
+              <div class="jumbotron">
+                <h1 class="display-1" style="font-family: 'Shadows Into Light', cursive">
+                  Technical Core
+                </h1>
+                <p>
+                  ​​​​​​​​​​​Welcome to the technical core website! This site will provide you with
+                  information on projects being worked on by the technical core. Along with this,
+                  documentation of certain devices will be provided here. You will also be able
+                  to request to borrow items from the AV lab using this website.
+                </p>
+                <div class="row justify-content-center">
+                  <a class="btn btn-outline-info" href="https://www.boystownhospital.org/research/COBRE/Pages/Technical-Core.aspx" role="button">Full Site</a>
+                </div>
+            </div>
             </div>
           </div>
         </div>
       <section>
 
+      <section class="p-5"></section>
+      <section class="p-5"></section>
+
+
       <!-- Highlights -->
       <section>
-        <div class="container">
+        <div class="container-fluid"  style="background-image: URL('images/BlueLines.jpg')">
           <div class="row justify-content-around p-3">
-            <div class="col">
-              <div class="jumbotron">
-                <h1 class="display-4">Some Projects</h1>
+            <div class="col-4">
+              <div class="jumbotron" style="background-color: #cee1ff !important;">
+                <h1 class="display-4">Highlighted Projects</h1>
                 <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
                 <hr class="my-4">
                 <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-outline-info btn-lg" href="#" role="button">Learn more</a>
               </div>
             </div>
-            <div class="col">
-                Yo whattup
+            <div class="col-4">
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/books.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Project 1</h5>
+                      <a class="btn btn-outline-info btn-sm" href="#" role="button">Learn more</a>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="images/dna.jpg" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Project 2</h5>
+                      <a class="btn btn-outline-info btn-sm" href="#" role="button">Learn more</a>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="images/computer.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>Project 3</h5>
+                    <a class="btn btn-outline-info btn-sm" href="#" role="button">Learn more</a>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
+      <section class="p-5"></section>
+      <section class="p-5"></section>
+
       <!-- Personell -->
-      <section class="pt-5 m-5">
+      <section class="pt-5" style="background-color: #11213f">
         <div class="container-fluid">
-          <div class="row justify-content-center p-5" style="text-transform:uppercase; color: #e5af00">
+          <div class="row justify-content-center p-5" style="text-transform:uppercase; color: #f29a0a">
             <h1>personell</h1>
           </div>
           <div class="row">
             <div class="col-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card border-0" style="width: 18rem;">
                 <img class="card-img-top" src="images/TimothyV.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Timothy Vallier</h5>
@@ -95,13 +144,13 @@
                      and implementing audio/visual information systems for grant supported
                      research projects. As a software developer, Vallier creates tools and programs
                      (Max, Python, C++, R) to display, record, and manipulate multimedia stimuli.</p>
-                  <a href="#" class="btn btn-primary">View Projects</a>
+                  <a href="#" class="btn btn-outline-info">View Projects</a>
                 </div>
               </div>
             </div>
 
             <div class="col-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card border-0" style="width: 18rem;">
                 <img class="card-img-top" src="images/MonitaC.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Monita Chatterjee</h5>
@@ -109,18 +158,18 @@
                     Director of the Auditory Prostheses & Perception Laboratory.
                     She investigates the basic mechanisms underlying auditory processing by
                     cochlear implant listeners.</p>
-                  <a href="#" class="btn btn-primary">View Projects</a>
+                  <a href="#" class="btn btn-outline-info">View Projects</a>
                 </div>
               </div>
             </div>
 
             <div class="col-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card border-0" style="width: 18rem;">
                 <img class="card-img-top" src="images/DanielR.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Daniel Rasetshwane</h5>
                   <p class="card-text">Daniel Rasethshwane is the director of the Auditory Signal Processing Lab</p>
-                  <a href="#" class="btn btn-primary">View Projects</a>
+                  <a href="#" class="btn btn-outline-info">View Projects</a>
                 </div>
               </div>
             </div>
