Organized layout more. Improved Carousel. New Technical Core Header

--- a/Pages/inventory.html
+++ b/Pages/inventory.html
@@ -10,9 +10,10 @@
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <style>
-    @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light|Source+Serif+Pro:400,600,700');
+    @import url('https://fonts.googleapis.com/css?family=Cinzel|Shadows+Into+Light|Source+Serif+Pro:400,600,700');
 
     body{
+      padding-top: 92px;
       background-color: #264a84
     }
 
