--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <style>
-    @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light|Source+Serif+Pro:400,600,700');
-
+    @import url('https://fonts.googleapis.com/css?family=Cinzel|Shadows+Into+Light|Source+Serif+Pro:400,600,700');
     body{
+      padding-top: 92px;
       background-color: #264a84
     }
 
     .jumbotron{
-      background-color: #d6e5ff !important;
+      background-color:  #f29a0a !important;
+    }
+
+    .card{
+      background-color: #f29a0a
+    }
+    .examples{
+      padding-top: 5rem;
     }
     </style>
 
@@ -43,11 +50,10 @@
 
       <!-- Main header-->
       <section>
-        <div class="container-fluid" style="background-image: URL('images/fabric.jpg'); color: #1598af">
+        <div class="container-fluid" style="background-color: #0f005b; color: #1598af">
           <div class="row justify-content-md-center p-5">
             <div class="col-6">
-              <div class="jumbotron">
-                <h1 class="display-1" style="font-family: 'Shadows Into Light', cursive">
+                <h1 class="display-1" style="font-family: 'Cinzel', serif">
                   Technical Core
                 </h1>
                 <p>
@@ -60,10 +66,9 @@
                   <a class="btn btn-outline-info" href="https://www.boystownhospital.org/research/COBRE/Pages/Technical-Core.aspx" role="button">Full Site</a>
                 </div>
             </div>
-            </div>
           </div>
         </div>
-      <section>
+      </section>
 
       <section class="p-5"></section>
       <section class="p-5"></section>
@@ -72,17 +77,16 @@
       <!-- Highlights -->
       <section>
         <div class="container-fluid"  style="background-image: URL('images/BlueLines.jpg')">
-          <div class="row justify-content-around p-3">
-            <div class="col-4">
-              <div class="jumbotron" style="background-color: #cee1ff !important;">
+          <div class="row p-3">
+            <div class="col-6 examples">
+              <div class="jumbotron">
                 <h1 class="display-4">Highlighted Projects</h1>
-                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-                <hr class="my-4">
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-                <a class="btn btn-outline-info btn-lg" href="#" role="button">Learn more</a>
+                <hr class="my-5">
+                <p>View All of our projects.</p>
+                <a class="btn btn-outline-warning btn-lg" href="#" role="button">Learn more</a>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-6 examples p-5">
               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -91,33 +95,28 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/books.jpg" alt="First slide">
+                    <img class="d-block w-100" src="images/booksCrop.jpg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Project 1</h5>
-                      <a class="btn btn-outline-info btn-sm" href="#" role="button">Learn more</a>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="images/dna.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="images/dnaCrop.jpg" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Project 2</h5>
-                      <a class="btn btn-outline-info btn-sm" href="#" role="button">Learn more</a>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="images/computer.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="images/codeCrop.png" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                     <h5>Project 3</h5>
-                    <a class="btn btn-outline-info btn-sm" href="#" role="button">Learn more</a>
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
                 </a>
               </div>
             </div>
@@ -129,14 +128,14 @@
       <section class="p-5"></section>
 
       <!-- Personell -->
-      <section class="pt-5" style="background-color: #11213f">
+      <section class="py-5" style="background-color: #11213f">
         <div class="container-fluid">
           <div class="row justify-content-center p-5" style="text-transform:uppercase; color: #f29a0a">
             <h1>personell</h1>
           </div>
           <div class="row">
             <div class="col-4">
-              <div class="card border-0" style="width: 18rem;">
+              <div class="card border-0" style="width: 18rem">
                 <img class="card-img-top" src="images/TimothyV.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Timothy Vallier</h5>
@@ -144,7 +143,7 @@
                      and implementing audio/visual information systems for grant supported
                      research projects. As a software developer, Vallier creates tools and programs
                      (Max, Python, C++, R) to display, record, and manipulate multimedia stimuli.</p>
-                  <a href="#" class="btn btn-outline-info">View Projects</a>
+                  <a href="#" class="btn btn-outline-warning">View Projects</a>
                 </div>
               </div>
             </div>
@@ -158,7 +157,7 @@
                     Director of the Auditory Prostheses & Perception Laboratory.
                     She investigates the basic mechanisms underlying auditory processing by
                     cochlear implant listeners.</p>
-                  <a href="#" class="btn btn-outline-info">View Projects</a>
+                  <a href="#" class="btn btn-outline-warning">View Projects</a>
                 </div>
               </div>
             </div>
@@ -169,7 +168,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Daniel Rasetshwane</h5>
                   <p class="card-text">Daniel Rasethshwane is the director of the Auditory Signal Processing Lab</p>
-                  <a href="#" class="btn btn-outline-info">View Projects</a>
+                  <a href="#" class="btn btn-outline-warning">View Projects</a>
                 </div>
               </div>
             </div>
