--- a/Pages/applications.html
+++ b/Pages/applications.html
@@ -11,7 +11,6 @@
 
     <style>
     @import url('https://fonts.googleapis.com/css?family=Cinzel|Shadows+Into+Light|Source+Serif+Pro:400,600,700');
-
     body{
       padding-top: 92px;
       background-color: #264a84
@@ -34,18 +33,16 @@
               <a class="nav-link" href="../index.html">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Inventory</a>
+              <a class="nav-link" href="../pages/inventory.html">Inventory</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/applications.html">Applications</a>
+              <a class="nav-link" href="#">Applications</a>
             </li>
           </ul>
     </nav>
-
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScT3PrjU7f-uVng4HOyy0J0UE9j4eeExu-r2LPZrw7vFzwo-w/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 
   </body>
