--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <li class="nav-item">
               <a class="nav-link" href="pages/projects.html">Projects</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/applications.html">Applications</a>
+            </li>
           </ul>
     </nav>
 
@@ -54,10 +57,10 @@
           <div class="row justify-content-md-center p-5">
             <div class="col-6">
                 <h1 class="display-1" style="font-family: 'Cinzel', serif">
-                  Technical Core
+                  Technology Core
                 </h1>
                 <p>
-                  ​​​​​​​​​​​Welcome to the technical core website! This site will provide you with
+                  ​​​​​​​​​​​Welcome to the technology core website! This site will provide you with
                   information on projects being worked on by the technical core. Along with this,
                   documentation of certain devices will be provided here. You will also be able
                   to request to borrow items from the AV lab using this website.
