--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -29,14 +29,17 @@
       <img src="../images/boys town logo.png" alt="Boystown" width="110" height="100">
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="../index.html">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="inventory.html">Inventory</a>
+              <a class="nav-link" href="../pages/inventory.html">Inventory</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/applications.html">Applications</a>
             </li>
           </ul>
     </nav>
