--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home </a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/inventory.html">Inventory</a>
+              <a class="nav-link" href="inventory.html">Inventory</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/projects.html">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/applications.html">Applications</a>
+              <a class="nav-link" href="applications.html">Applications</a>
             </li>
           </ul>
     </nav>
