--- a/inventory.html
+++ b/inventory.html
@@ -27,20 +27,20 @@
   <body>
     <!-->navigation bar</h1></!-->
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
-      <img src="../images/boys town logo.png" alt="Boystown" width="110" height="100">
+      <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home </a>
+              <a class="nav-link" href="index.html">Home </a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="#">Inventory</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/projects.html">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/applications.html">Applications</a>
+              <a class="nav-link" href="applications.html">Applications</a>
             </li>
           </ul>
     </nav>
