--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,6 @@
 
     <style>
     @import url('https://fonts.googleapis.com/css?family=Cinzel|Shadows+Into+Light|Source+Serif+Pro:400,600,700');
-
     body{
       padding-top: 92px;
       background-color: #264a84
@@ -27,25 +26,23 @@
   <body>
     <!-->navigation bar</h1></!-->
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
-      <img src="../images/boys town logo.png" alt="Boystown" width="110" height="100">
+      <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home </a>
+              <a class="nav-link" href="index.html">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="inventory.html">Inventory</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Inventory</a>
+              <a class="nav-link" href="#">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/projects.html">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/applications.html">Applications</a>
+              <a class="nav-link" href="applications.html">Applications</a>
             </li>
           </ul>
     </nav>
-
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScT3PrjU7f-uVng4HOyy0J0UE9j4eeExu-r2LPZrw7vFzwo-w/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 
   </body>
