More pages updates

--- a/applications.html
+++ b/applications.html
@@ -33,10 +33,10 @@
               <a class="nav-link" href="index.html">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/inventory.html">Inventory</a>
+              <a class="nav-link" href="inventory.html">Inventory</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/projects.html">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="#">Applications</a>
