--- a/applications.html
+++ b/applications.html
@@ -27,10 +27,15 @@
     <!-->navigation bar</h1></!-->
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
       <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav4">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav4">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home </a>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="inventory.html">Inventory</a>
@@ -38,10 +43,11 @@
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Applications</a>
+            <li class="nav-item">
+              <a class="nav-link" href="applications.html">Applications</a>
             </li>
           </ul>
+        </div>
     </nav>
 
 
