--- a/inventory.html
+++ b/inventory.html
@@ -28,13 +28,18 @@
     <!-->navigation bar</h1></!-->
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
       <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav2">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav2">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home </a>
-            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Inventory</a>
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="inventory.html">Inventory</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
@@ -43,9 +48,10 @@
               <a class="nav-link" href="applications.html">Applications</a>
             </li>
           </ul>
+        </div>
     </nav>
 
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScT3PrjU7f-uVng4HOyy0J0UE9j4eeExu-r2LPZrw7vFzwo-w/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    <iframe class="embed-responsive" src="https://docs.google.com/forms/d/e/1FAIpQLScT3PrjU7f-uVng4HOyy0J0UE9j4eeExu-r2LPZrw7vFzwo-w/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 
   </body>
