improved navigation and responsitivity

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
   <body>
     <!-->navigation bar</h1></!-->
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+      <a href="index.html">
       <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
-
+    </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav1">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,7 +44,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav1">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="inventory.html">Inventory</a>
@@ -60,10 +61,10 @@
 
       <!-- Main header-->
       <section>
-        <div class="container" style="background-color: #0f005b; color: #1598af">
+        <div class="container-fluid" style="background-color: #0f005b; color: #1598af">
           <div class="row justify-content-md-center p-5">
             <div class="col-6">
-                <h1 class="display-3" style="font-family: 'Cinzel', serif">
+                <h1 class="display-5" style="font-family: 'Cinzel', serif; color: white">
                   Technology Core
                 </h1>
                 <p>
@@ -86,7 +87,7 @@
 
       <!-- Highlights -->
       <section>
-        <div class="container"  style="background-image: URL('images/BlueLines.jpg')">
+        <div class="container-fluid"  style="background-image: URL('images/BlueLines.jpg')">
           <div class="row p-3">
             <div class="col-lg-6 col-xs-12 examples">
               <div class="jumbotron">
@@ -138,7 +139,7 @@
       <section class="p-5"></section>
 
       <!-- Personell -->
-      <section class="py-5" style="background-color: #11213f">
+      <section class="p-5" style="background-color: #11213f">
         <div class="container-fluid">
           <div class="row justify-content-center p-5" style="text-transform:uppercase; color: #f29a0a">
             <h1>personell</h1>
