--- a/applications.html
+++ b/applications.html
@@ -26,16 +26,17 @@
   <body>
     <!-->navigation bar</h1></!-->
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+      <a href="index.html">
       <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
-
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav4">
+    </a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav1">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav4">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav1">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="inventory.html">Inventory</a>
@@ -43,7 +44,7 @@
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="applications.html">Applications</a>
             </li>
           </ul>
@@ -51,5 +52,12 @@
     </nav>
 
 
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+      </body>
   </body>
 </html>
