Added footer and revised inventory sidebar

--- a/inventory.html
+++ b/inventory.html
@@ -52,7 +52,39 @@
         </div>
     </nav>
 
-    <iframe class="embed-responsive" src="https://docs.google.com/forms/d/e/1FAIpQLScT3PrjU7f-uVng4HOyy0J0UE9j4eeExu-r2LPZrw7vFzwo-w/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    <div class="contatiner-fluid">
+      <div class="row">
+        <div class="col-3 ">
+          <div class="list-group-flush">
+            <a href="#" class="list-group-item list-group-item-action active">
+              Full Inventory
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">Loan Request</a>
+            <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+            <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+            <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+          </div>
+        </div>
+        <div class="col-9">
+          <iframe class="embed-responsive" src="https://docs.google.com/forms/d/e/1FAIpQLScT3PrjU7f-uVng4HOyy0J0UE9j4eeExu-r2LPZrw7vFzwo-w/viewform?embedded=true" width="800" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+      </div>
+    </div>
+
+
+    <footer>
+      <div class="container-fuid p-4" style="background:#2e3338">
+        <div class="row justify-content-around m-2">
+          <div class="col-m-4">
+            <a href="https://www.facebook.com/BoysTownHospital/" style="color: grey">Facebook</a>
+          </div>
+          <div class="col-m-4">
+            <a href="https://www.boystownhospital.org/Pages/default.aspx" style="color: grey">FullSite</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
