--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,20 @@
     </nav>
 
 
+    <footer>
+      <div class="container-fuid p-4" style="background:#2e3338">
+        <div class="row justify-content-around m-2">
+          <div class="col-m-4">
+            <a href="https://www.facebook.com/BoysTownHospital/" style="color: grey">Facebook</a>
+          </div>
+          <div class="col-m-4">
+            <a href="https://www.boystownhospital.org/Pages/default.aspx" style="color: grey">FullSite</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
