--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <title>AV Lab</title>
   </head>
   <body>
-    <!-->navigation bar</h1></!-->
+    <!-->navigation bar</!-->
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
       <a href="index.html">
       <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
-    </a>
+      </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav1">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -185,6 +185,19 @@
             </div>
         </div>
       </section>
+
+      <footer>
+        <div class="container-fuid p-4" style="background:#2e3338">
+          <div class="row justify-content-around m-2">
+            <div class="col-m-4">
+              <a href="https://www.facebook.com/BoysTownHospital/" style="color: grey">Facebook</a>
+            </div>
+            <div class="col-m-4">
+              <a href="https://www.boystownhospital.org/Pages/default.aspx" style="color: grey">FullSite</a>
+            </div>
+          </div>
+        </div>
+      </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
