Deck the Daniels

--- a/inventory.html
+++ b/inventory.html
@@ -49,7 +49,7 @@
 
     .sidenav a{
       display:inline-grid;
-      width: 20%;
+      width: 33.3%;
       height: 60px;
       padding: 8px;
       font-size: 12px;
@@ -101,9 +101,7 @@
               Full Inventory
             </a>
             <a href="#" class="list-group-item list-group-item-dark">Loan Request</a>
-            <a href="#" class="list-group-item list-group-item-dark">Morbi leo risus</a>
-            <a href="#" class="list-group-item list-group-item-dark">Porta ac consectetur ac</a>
-            <a href="#" class="list-group-item list-group-item-dark">Vestibulum at eros</a>
+            <a href="#" class="list-group-item list-group-item-dark">AV Cart</a>
           </div>
         </div>
         <div class="col-12 col-sm-9">
@@ -115,11 +113,12 @@
 
     <footer>
       <div class="container-fuid p-4" style="background:#2e3338">
-        <div class="row justify-content-around m-2">
-          <div class="col-m-4">
+        <div class="row m-2 justify-content-around">
+          <div class="col-sm-4 col-xs-0"></div>
+          <div class="col-sm-4 col-xs-4">
             <a href="https://www.facebook.com/BoysTownHospital/" style="color: grey">Facebook</a>
           </div>
-          <div class="col-m-4">
+          <div class="col-sm-4 col-xs-4">
             <a href="https://www.boystownhospital.org/Pages/default.aspx" style="color: grey">FullSite</a>
           </div>
         </div>
@@ -127,10 +126,12 @@
     </footer>
 
 
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script scr="js/Scripts.js">
   </body>
 </html>
