--- a/index.html
+++ b/index.html
@@ -184,6 +184,28 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-lg-4 col-sm-6 col-xs-12 mt-5">
+              <div class="card border-0" style="width: 15rem;">
+                <img class="card-img-top" src="images/DanielR.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Daniel Rasetshwane</h5>
+                  <p class="card-text">Daniel Rasethshwane is the director of the Auditory Signal Processing Lab</p>
+                  <a href="#" class="btn btn-outline-warning">View Projects</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 col-xs-12 mt-5">
+              <div class="card border-0" style="width: 15rem;">
+                <img class="card-img-top" src="images/DanielR.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Daniel Rasetshwane</h5>
+                  <p class="card-text">Daniel Rasethshwane is the director of the Auditory Signal Processing Lab</p>
+                  <a href="#" class="btn btn-outline-warning">View Projects</a>
+                </div>
+              </div>
+            </div>
         </div>
       </section>
 
@@ -205,5 +227,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script scr="js/Scripts.js"
   </body>
 </html>
