added inventory slots and java script console test

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- Main header-->
       <section>
         <div class="container-fluid" style="background-color: #0f005b; color: #1598af">
-          <div class="row justify-content-md-center p-3">
+          <div class="row justify-content-center p-3">
             <div class="col-6">
                 <h1 class="display-5" style="font-family: 'Cinzel', serif; color: white">
                   Technology Core
@@ -146,7 +146,7 @@
             <h1>personell</h1>
           </div>
           <div class="row justify-content-center">
-            <div class="col-lg-4 col-sm-6 col-xs-12 mt-5">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
               <div class="card border-0" style="width: 15rem">
                 <img class="card-img-top" src="images/TimothyV.png" alt="Card image cap">
                 <div class="card-body">
@@ -160,7 +160,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-sm-6 col-xs-12 mt-5">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
               <div class="card border-0" style="width: 15rem;">
                 <img class="card-img-top" src="images/MonitaC.jpg" alt="Card image cap">
                 <div class="card-body">
@@ -174,7 +174,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-sm-6 col-xs-12 mt-5">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
               <div class="card border-0" style="width: 15rem;">
                 <img class="card-img-top" src="images/DanielR.jpg" alt="Card image cap">
                 <div class="card-body">
@@ -185,18 +185,21 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-sm-6 col-xs-12 mt-5">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
               <div class="card border-0" style="width: 15rem;">
-                <img class="card-img-top" src="images/DanielR.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/Seth Bashford.jpeg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Daniel Rasetshwane</h5>
-                  <p class="card-text">Daniel Rasethshwane is the director of the Auditory Signal Processing Lab</p>
+                  <h5 class="card-title">Seth Bashford</h5>
+                  <p class="card-text">Seth Bashford writes software for real-time
+                    audio signal processing, cochlear implant communication,
+                    and data analysis. He enjoys playing guitar and trombone,
+                    running in the heat, and playing Nintendo video games.</p>
                   <a href="#" class="btn btn-outline-warning">View Projects</a>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-sm-6 col-xs-12 mt-5">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
               <div class="card border-0" style="width: 15rem;">
                 <img class="card-img-top" src="images/DanielR.jpg" alt="Card image cap">
                 <div class="card-body">
@@ -207,6 +210,7 @@
               </div>
             </div>
         </div>
+      </div>
       </section>
 
       <footer>
@@ -222,11 +226,10 @@
         </div>
       </footer>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script scr="js/Scripts.js"
+    <script src="js/Scripts.js"></script>
   </body>
 </html>
