--- a/inventory-loanRequest.html
+++ b/inventory-loanRequest.html
@@ -23,7 +23,7 @@
     .sidenav{
       position: fixed;
       height: 100%;
-      width: 24.1%;
+      width: 27%;
       background-color: #2e3338;
     }
 
@@ -36,14 +36,6 @@
     .sidenav .list-group-item:hover{
       background-color: grey;
       color: white;
-    }
-
-    .available{
-      background-color: #a0ff9c
-    }
-
-    .unavailable{
-      background-color: #ff5e5e
     }
 
     @media screen and (max-width: 576px) {
@@ -105,96 +97,22 @@
       <div class="row">
         <div class="col-12 col-sm-3">
           <div class="list-group-flush sidenav">
-            <a href="inventory.html" class="list-group-item list-group-item-dark active">
+            <a href="inventory.html" class="list-group-item list-group-item-dark">
               Full Inventory
             </a>
-            <a href="inventory-loanRequest.html" class="list-group-item list-group-item-dark">Loan Request</a>
+            <a href="inventory-loanRequest.html" class="list-group-item list-group-item-dark active">Loan Request</a>
             <a href="inventory-avCart.html" class="list-group-item list-group-item-dark">AV Cart</a>
           </div>
         </div>
-        <div class="col-12 col-sm-9 p-3" style="background:#292d31">
-          <div class="container-fluid content">
-            <div class="row">
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card available">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card unavailable">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card unavailable">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card available">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="col-12 col-sm-9">
+          <iframe class="embed-responsive content" src="https://docs.google.com/forms/d/e/1FAIpQLScT3PrjU7f-uVng4HOyy0J0UE9j4eeExu-r2LPZrw7vFzwo-w/viewform?embedded=true" width="800" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
       </div>
     </div>
 
 
     <footer>
-      <div class="container-fuid p-4" style="background: #292d31">
+      <div class="container-fuid p-4" style="background:#2e3338">
         <div class="row m-2 justify-content-around">
           <div class="col-sm-4 col-xs-0"></div>
           <div class="col-sm-4 col-xs-4">
