Organized inventory items

--- a/index.html
+++ b/index.html
@@ -9,25 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <style>
-    @import url('https://fonts.googleapis.com/css?family=Cinzel|Shadows+Into+Light|Source+Serif+Pro:400,600,700');
-
-    body{
-      padding-top: 92px;
-      background-color: #264a84
-    }
-
-    .jumbotron{
-      background-color:  #f29a0a !important;
-    }
-
-    .card{
-      background-color: #f29a0a
-    }
-    .examples{
-      padding-top: 5rem;
-    }
-    </style>
+    <link rel="stylesheet" href="css/index.css">
 
     <title>AV Lab</title>
   </head>
@@ -199,16 +181,6 @@
               </div>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
-              <div class="card border-0" style="width: 15rem;">
-                <img class="card-img-top" src="images/DanielR.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Daniel Rasetshwane</h5>
-                  <p class="card-text">Daniel Rasethshwane is the director of the Auditory Signal Processing Lab</p>
-                  <a href="#" class="btn btn-outline-warning">View Projects</a>
-                </div>
-              </div>
-            </div>
         </div>
       </div>
       </section>
