--- a/inventory.html
+++ b/inventory.html
@@ -23,7 +23,7 @@
     .sidenav{
       position: fixed;
       height: 100%;
-      width: 24.1%;
+      width: 25%;
       background-color: #2e3338;
     }
 
@@ -57,7 +57,7 @@
 
     .sidenav a{
       display:inline-grid;
-      width: 33.3%;
+      width: 33.33333333%;
       height: 60px;
       padding: 8px;
       font-size: 12px;
@@ -78,7 +78,7 @@
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
       <a href="index.html">
       <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
-    </a>
+      </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav1">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -116,77 +116,59 @@
         <div class="col-12 col-sm-9 p-3" style="background:#292d31">
           <div class="container-fluid content">
             <div class="row" id="items">
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card available">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
+
+              <div class="col-12 col-lg-6 pb-5">
+                <div id="audio" class="row">
+                <div class="col-12">
+                  <h1 class="display-5" style="font-family: 'Cinzel', serif; color: #f29a0a">
+                    Audio
+                  </h1>
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-6 py-3">
+                  <div class="card available">
+                      <div class="card-title">
+                        Item
+                      </div>
+                    <div class="card-body"> This describes some aspects of the item</div>
+                  </div>
+                </div>
+
                 </div>
               </div>
 
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
+              <div class="col-12 col-lg-6 pb-5">
+                <div id="cables" class="row">
+
+                <div class="col-12">
+                  <h1 class="display-5" style="font-family: 'Cinzel', serif; color: #f29a0a">
+                    Cables
+                  </h1>
+                </div>
+
                 </div>
               </div>
 
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card unavailable">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
+              <div class="col-12 col-lg-6 pb-5">
+                <div id="tools" class="row">
+                <div class="col-12">
+                  <h1 class="display-5" style="font-family: 'Cinzel', serif; color: #f29a0a">
+                    Tools
+                  </h1>
+                </div>
                 </div>
               </div>
 
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
+              <div class="col-12 col-lg-6 pb-5">
+                <div id="video" class="row">
+                <div class="col-12">
+                  <h1 class="display-5" style="font-family: 'Cinzel', serif; color: #f29a0a">
+                    Video
+                  </h1>
+                </div>
                 </div>
               </div>
 
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card unavailable">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card available">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-4 col-lg-2 py-3">
-                <div class="card">
-                    <div class="card-title">
-                      Item
-                    </div>
-                  <div class="card-body"> This describes some aspects of the item</div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -195,13 +177,13 @@
 
 
     <footer>
-      <div class="container-fuid p-4" style="background: #292d31">
+      <div class="container-fuid p-4" style="background: #2e3338">
         <div class="row m-2 justify-content-around">
-          <div class="col-sm-4 col-xs-0"></div>
-          <div class="col-sm-4 col-xs-4">
+          <div class="col-sm-4 col-0"></div>
+          <div class="col-sm-4 col-4">
             <a href="https://www.facebook.com/BoysTownHospital/" style="color: grey">Facebook</a>
           </div>
-          <div class="col-sm-4 col-xs-4">
+          <div class="col-sm-4 col-4">
             <a href="https://www.boystownhospital.org/Pages/default.aspx" style="color: grey">FullSite</a>
           </div>
         </div>
