--- a/inventory-loanRequest.html
+++ b/inventory-loanRequest.html
@@ -115,11 +115,11 @@
     <footer>
       <div class="container-fuid p-4" style="background:#2e3338">
         <div class="row m-2 justify-content-around">
-          <div class="col-sm-4 col-xs-0"></div>
-          <div class="col-sm-4 col-xs-4">
+          <div class="col-sm-4 col-0"></div>
+          <div class="col-sm-4 col-4">
             <a href="https://www.facebook.com/BoysTownHospital/" style="color: grey">Facebook</a>
           </div>
-          <div class="col-sm-4 col-xs-4">
+          <div class="col-sm-4 col-4">
             <a href="https://www.boystownhospital.org/Pages/default.aspx" style="color: grey">FullSite</a>
           </div>
         </div>
