Added Core Use Application

--- a/applications.html
+++ b/applications.html
@@ -51,7 +51,13 @@
         </div>
     </nav>
 
-
+    <div class="contatiner-fluid">
+      <div class="row">
+        <div class="col-12">
+          <iframe class="embed-responsive content" src="https://docs.google.com/forms/d/e/1FAIpQLSepJjih8d4npKBw0hgERBP66AtpdH0mCSlCS0ivRNSPnUKzPw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+      </div>
+    </div>
 
     <footer>
       <div class="container-fuid p-4" style="background:#2e3338">
