Added template projects page

--- a/index.html
+++ b/index.html
@@ -181,6 +181,20 @@
               </div>
             </div>
 
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
+              <div class="card border-0" style="width: 15rem;">
+                <img class="card-img-top" src="images/Daniel.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Daniel Faronbi</h5>
+                  <p class="card-text">Daniel Faronbi is a Media Support Engineer.
+                  He provides audio visual support for reasearch. In addition, Daniel
+                  also helps organize multiple aspects of the AV Lab. Inlcuding the
+                  inventory system and the website</p>
+                  <a href="#" class="btn btn-outline-warning">View Projects</a>
+                </div>
+              </div>
+            </div>
+
         </div>
       </div>
       </section>
