--- a/inventory-loanRequest.html
+++ b/inventory-loanRequest.html
@@ -10,6 +10,11 @@
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/inventory.css">
+    <style>
+    .sidenav{
+      width: 27%;
+    }
+    </style>
 
     <title>AV Lab</title>
   </head>
