--- a/projects-danielR.html
+++ b/projects-danielR.html
@@ -46,11 +46,11 @@
       <div class="row">
         <div class="col-12 col-sm-3">
           <div class="list-group-flush sidenav">
-            <a href="projects.html" class="list-group-item list-group-item-dark active">
+            <a href="projects.html" class="list-group-item list-group-item-dark">
               Tim Vallier
             </a>
             <a href="projects-monita.html" class="list-group-item list-group-item-dark">Monita Chatterjee</a>
-            <a href="projects-danielR.html" class="list-group-item list-group-item-dark">Daniel Rasetshwan</a>
+            <a href="projects-danielR.html" class="list-group-item list-group-item-dark active">Daniel Rasetshwan</a>
             <a href="projects-seth.html" class="list-group-item list-group-item-dark">Seth Bashford</a>
             <a href="projects-danielF.html" class="list-group-item list-group-item-dark">Daniel Faronbi</a>
           </div>
